# minisatoshi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tmp_tx.json
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
.specify/: init-options.json  integration.json
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: test-seedqr.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: app.toml
apps/desktop/src-tauri/src/: commands.rs  dto.rs  error.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: BroadcastConfirmSummary.tsx  HwConnectKeyPanel.tsx  HwDevicePicker.tsx  MnemonicGrid.tsx  PsbtSignMethodPanel.tsx
apps/desktop/src/flash/: FlashContext.tsx
apps/desktop/src/i18n/: LocaleContext.tsx  en.ts  vi.ts
apps/desktop/src/layout/: AppLayout.tsx  HotWalletLayout.tsx  VaultLayout.tsx  WalletLayout.tsx  WalletShell.tsx
apps/desktop/src/lib/: api.ts  download.ts  duration.ts  formatSyncAge.ts  formatTxTime.ts  hwPaths.ts  policyTemplates.ts  qrChunks.ts  seedQr.ts  settings.ts  signingStatus.ts  types.ts  useSuccessPulse.ts  watchOnly.ts  workspaceAuto.ts
apps/desktop/src/pages/: HotWalletsPage.tsx  ImportVaultPage.tsx  ImportWalletPage.tsx  NewVaultPage.tsx  NewWalletPage.tsx  ReceivePage.tsx  SendPage.tsx  SettingsPage.tsx  ShareVaultPage.tsx  ShareWalletPage.tsx  SignPsbtPage.tsx  TransactionsPage.tsx  VaultAddressesPage.tsx  VaultDetailPage.tsx  VaultSettingsPage.tsx  VaultTransactionsPage.tsx  VaultUtxosPage.tsx  VaultsPage.tsx  WalletAddressesPage.tsx  WalletSettingsPage.tsx  WalletTransactionsPage.tsx  WalletUtxosPage.tsx  WalletsPage.tsx  WorkspacesPage.tsx
apps/desktop/src/vault/: VaultContext.tsx
apps/desktop/src/wallet/: WalletContext.tsx
crates/address-engine/: Cargo.toml
crates/address-engine/src/: derive.rs  error.rs  lib.rs  types.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: backend.rs  core_rpc.rs  electrum.rs  error.rs  esplora.rs  lib.rs  query.rs  scanner.rs  sparrow.rs  types.rs
crates/descriptor-engine/: Cargo.toml
crates/descriptor-engine/src/: compile.rs  error.rs  lib.rs
crates/hot-keystore/: Cargo.toml
crates/hot-keystore/src/: derive.rs  error.rs  lib.rs  store.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: compile.rs  config.rs  error.rs  lib.rs  parser.rs  paths.rs  templates.rs  test_vectors.rs  timelock.rs  translate.rs  translate_tests.rs  validate.rs
crates/policy-engine/tests/: phase2_policy.rs
crates/psbt-engine/: Cargo.toml
crates/psbt-engine/src/: broadcast.rs  combine.rs  create.rs  descriptor.rs  enrich.rs  error.rs  export.rs  finalize.rs  hw_sign.rs  lib.rs  sign.rs  status.rs  test_keys.rs  types.rs
crates/signing-devices/: Cargo.toml
crates/signing-devices/src/: error.rs  hwi.rs  install.rs  lib.rs  registration.rs  types.rs
crates/signing-devices/src/ledger/: cli.rs  device.rs  errors.rs  install.rs  mod.rs  store.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  error.rs  lib.rs  models.rs  schema.rs
crates/vault/: Cargo.toml
crates/vault/src/: error.rs  lib.rs  service.rs  types.rs
crates/vault/tests/: vault_lifecycle.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: backup.rs  error.rs  import_parse.rs  lib.rs  store.rs  types.rs
docs/: DEVELOPMENT_PLAN.md  bitcoin-core-miniscript.md  hardware-signing.md  interop.md  ledger-wallet-policy-plan.md  policy-format.md  workspace-wallet-rename.md
tests/vectors/: policy_abc_mainnet.json  policy_abc_mainnet_descriptor.txt  policy_abc_testnet.json
tools/: _abc_isolate.py  _abc_isolate2.py  _abc_isolate3.py  _abc_isolate4.py  ledger_cli.py  ledger_register_abc_isolate.cmd  ledger_register_abc_isolate2.cmd  ledger_register_abc_isolate3.cmd  ledger_register_abc_isolate4.cmd  ledger_register_abc_no_older.json  ledger_register_abc_older65535.json  ledger_register_abc_smoke.cmd  ledger_register_abc_testnet.json  ledger_register_baseline.cmd  ledger_register_isolate.cmd  ledger_register_minimal.json  ledger_register_official_wsh.json  ledger_register_smoke.cmd  ledger_register_test.cmd  ledger_register_wsh_testnet.json
