[workspace]
resolver = "2"
members = [
    "crates/policy-engine",
    "crates/descriptor-engine",
    "crates/wallet-core",
    "crates/address-engine",
    "crates/psbt-engine",
    "crates/blockchain",
    "crates/storage",
    "crates/vault",
    "crates/signing-devices",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/minisatoshi/minisatoshi"

[workspace.dependencies]
bitcoin = "0.32"
miniscript = { version = "13.1", features = ["compiler"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
policy-engine = { path = "crates/policy-engine" }
descriptor-engine = { path = "crates/descriptor-engine" }
storage = { path = "crates/storage" }
wallet-core = { path = "crates/wallet-core" }
address-engine = { path = "crates/address-engine" }
vault = { path = "crates/vault" }
blockchain = { path = "crates/blockchain" }
psbt-engine = { path = "crates/psbt-engine" }
signing-devices = { path = "crates/signing-devices" }
# Note: desktop crate is a workspace member via apps/desktop/src-tauri
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
