[package]
name = "policy-engine"
description = "JSON policy configuration to Miniscript compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitcoin.workspace = true
miniscript.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
descriptor-engine = { path = "../descriptor-engine" }
