[package]
name = "signing-devices"
description = "Hardware wallet discovery and HWI bridge for Minisatoshi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitcoin.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
