[package]
name = "signing-devices"
description = "Hardware wallet discovery and HWI bridge for Minisatoshi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitcoin.workspace = true
policy-engine.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
