[package]
name = "storage"
description = "SQLite persistence for Minisatoshi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
