[package]
name = "vault"
description = "Vault orchestration for Minisatoshi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
address-engine.workspace = true
blockchain.workspace = true
policy-engine.workspace = true
storage.workspace = true
thiserror.workspace = true
uuid.workspace = true
wallet-core.workspace = true

[dev-dependencies]
blockchain.workspace = true
descriptor-engine.workspace = true
httpmock = "0.8.3"
policy-engine.workspace = true
psbt-engine.workspace = true
tempfile = "3"
