[package]
name = "minisatoshi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "minisatoshi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
policy-engine.workspace = true
descriptor-engine.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
