[package]
name = "minisatoshi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "minisatoshi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
policy-engine.workspace = true
descriptor-engine.workspace = true
wallet-core.workspace = true
vault.workspace = true
blockchain.workspace = true
psbt-engine.workspace = true
address-engine.workspace = true
signing-devices.workspace = true
miniscript.workspace = true
bitcoin.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
